Add general link styling

--- a/cocktails/src/styles/base.css
+++ b/cocktails/src/styles/base.css
@@ -35,3 +35,12 @@ input[type='submit'] {
 	text-align: inherit;
 	cursor: pointer;
 }
+
+a {
+	color: var(--color-forest-green);
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
