Add background color

--- a/cocktails/src/styles/variables.css
+++ b/cocktails/src/styles/variables.css
@@ -2,6 +2,7 @@
 	--color-white: #ffffff;
 	--color-pine-green: #285430;
 	--color-forest-green: #086337;
+	--color-mint-green: #eef2e6;
 
 	--font-special: 'Arima', system-ui;
 	--font-standard: Arial, Helvetica, sans-serif;
