--- a/cocktails/src/styles/base.css
+++ b/cocktails/src/styles/base.css
@@ -7,6 +7,7 @@ html {
 	-webkit-font-smoothing: antialiased;
 	font-family: var(--font-standard);
 	color: var(--color-forest-green);
+	background-color: var(--color-mint-green);
 }
 
 body {
