Add possibility to use submit input as Button

--- a/cocktails/src/components/Button/style.module.css
+++ b/cocktails/src/components/Button/style.module.css
@@ -1,4 +1,5 @@
-.button {
+.button,
+.button:is(input) {
 	border: 0.1rem solid var(--color-forest-green);
 	border-radius: 1rem;
 	padding: 0 2rem;
