--- a/cocktails/src/views/HomeView/style.module.css
+++ b/cocktails/src/views/HomeView/style.module.css
@@ -1,5 +1,9 @@
 .home {
-	width: 50%;
-	margin-left: auto;
-	margin-right: auto;
+	width: 100%;
+	max-width: 30rem;
+	padding: var(--page-margin);
+	display: flex;
+	flex-direction: column;
+	gap: var(--gap);
+	align-items: center;
 }
