Add styling for mobile widths in CocktailView

--- a/cocktails/src/views/CocktailView/style.module.css
+++ b/cocktails/src/views/CocktailView/style.module.css
@@ -3,4 +3,20 @@
 	grid-template-columns: 1fr 1fr;
 	padding: var(--page-margin);
 	gap: var(--gap);
+	max-width: 75rem;
+}
+
+.info {
+	padding-top: var(--page-margin);
+}
+
+@media (max-width: 768px) {
+	.section {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.info {
+		padding-top: 0;
+	}
 }
