Change shadow color

--- a/cocktails/src/styles/variables.css
+++ b/cocktails/src/styles/variables.css
@@ -3,7 +3,7 @@
 	--color-pine-green: #285430;
 	--color-forest-green: #086337;
 	--color-mint-green: #eef2e6;
-	--color-shadow-grey: #535353;
+	--color-shadow-green: #3c5138;
 
 	--font-special: 'Arima', system-ui;
 	--font-standard: Arial, Helvetica, sans-serif;
