--- a/cocktails/src/components/Card/style.module.css
+++ b/cocktails/src/components/Card/style.module.css
@@ -1,5 +1,5 @@
 .card {
-	box-shadow: 0 0 0.8rem 0.2rem var(--color-shadow-grey);
+	box-shadow: 0 0 0.8rem 0.2rem var(--color-shadow-green);
 	padding: var(--page-margin);
 	border-radius: 1rem;
 }
