Adjust padding-top in of cocktail info

--- a/cocktails/src/views/CocktailView/style.module.css
+++ b/cocktails/src/views/CocktailView/style.module.css
@@ -7,7 +7,7 @@
 }
 
 .info {
-	padding-top: var(--page-margin);
+	padding-top: 10%;
 }
 
 @media (max-width: 768px) {
@@ -17,6 +17,6 @@
 	}
 
 	.info {
-		padding-top: 0;
+		padding-top: var(--page-margin);
 	}
 }
