--- a/cocktails/src/components/Card/style.module.css
+++ b/cocktails/src/components/Card/style.module.css
@@ -2,6 +2,7 @@
 	box-shadow: 0 0 0.8rem 0.2rem var(--color-shadow-green);
 	padding: var(--page-margin);
 	border-radius: 1rem;
+	display: block;
 }
 
 .image {
