Add disabled styling for Clickable component

--- a/cocktails/src/components/Clickable/style.module.css
+++ b/cocktails/src/components/Clickable/style.module.css
@@ -11,3 +11,9 @@
 .clickable:is(input):hover {
 	font-weight: 600;
 }
+
+.clickable:disabled,
+.clickable:is(.disabled) {
+	opacity: 0.5;
+	cursor: default;
+}
