Add shadow-green with some opacity

--- a/cocktails/src/styles/variables.css
+++ b/cocktails/src/styles/variables.css
@@ -4,6 +4,7 @@
 	--color-forest-green: #086337;
 	--color-mint-green: #eef2e6;
 	--color-shadow-green: #3c5138;
+	--color-shadow-green-opacity: #3c513870;
 
 	--font-special: 'Arima', system-ui;
 	--font-standard: Arial, Helvetica, sans-serif;
